src/test/ui/issues/issue-45829/rename-extern-vs-use.stderr
error[E0254]: the name `bar` is defined multiple times
  --> $DIR/rename-extern-vs-use.rs:8:1
   |
LL | use foo::bar;
   |     -------- previous import of the module `bar` here
LL | extern crate issue_45829_b as bar;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `bar` reimported here
   |
   = note: `bar` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | extern crate issue_45829_b as other_bar;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0254`.
